# AAI_590_IN1_Group-1

./: EDA.ipynb  Modeling+EDA.ipynb  README.md
FinalProject/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mlflow.db  pyproject.toml  sample_input.json
FinalProject/.github/workflows/: ci.yml
FinalProject/artifacts/: test_predictions.csv
FinalProject/config/: config.yaml
FinalProject/docker/: .dockerignore  Dockerfile.infer  Dockerfile.train  docker-compose.yaml
FinalProject/mlruns/1/8fe8acde0f9549839ab316ed451546de/artifacts/: best_model.onnx
FinalProject/mlruns/1/c8fabb4af23146ea8885c6af5b8422d4/artifacts/model/: best_model.onnx
FinalProject/mlruns/1/ce0072bf940a4a5caa7bf4fada8c9b3b/artifacts/model/: XGBClassifier.onnx  preprocessor.pkl
FinalProject/mlruns/1/f2c1e01485144254919ae7a20cdf0c52/artifacts/model/: columns.json
FinalProject/mlruns/1/models/m-2d7a7d791e6a4863955ce7f827ec020f/artifacts/: MLmodel  conda.yaml  requirements.txt
FinalProject/mlruns/1/models/m-41ef84a5e50e4323b74c0481f9244591/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
FinalProject/mlruns/1/models/m-56e1a05599cb405e94a743e4a36cd8c0/artifacts/: MLmodel  model.pkl  requirements.txt
FinalProject/mlruns/1/models/m-9392103555bc4b7583b005c3ba0b8b97/artifacts/: MLmodel  (+2 more)
FinalProject/models/: best_model.onnx
FinalProject/src/ml_system/api/: main.py
FinalProject/src/ml_system/data/: loader.py  preprocessor.py
FinalProject/src/ml_system/evaluation/: performance_gate.py
FinalProject/src/ml_system/features/: engineering.py
FinalProject/src/ml_system/models/: base.py  sklearn_model.py
FinalProject/src/ml_system/pipelines/: train.py
FinalProject/tests/: test_api.py  test_data.py
(+9 files in other folders)
